# obj-rs

./: Cargo.toml
assets/: cube.mtl  twocubes.mtl
src/: glium_window.rs  main.rs
src/wavefront/: mod.rs  mtl.rs  obj.rs
