[package]
name = "obj-rs"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]

[dependencies]
piston = "*"
piston_window = "*"
pistoncore-glutin_window = "0.35.0"

[dependencies.glium]
version = "0.16.0"

[dependencies.nom]
version = "^2.1"
features = [ "verbose-errors" ]

[dependencies.nalgebra]
version = "0.11.0"